--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script><title>Stats at a Glance</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous"></script>
 </head>
 <body>
   <h1>Stats at a Glance</h1>
@@ -41,6 +42,7 @@
     <iframe class="mobile" width="343" height="257" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSkkg-vNFXaE5VjA4N4G2bLwLfQENhN3wtj4-AxlUfIh5NO1vobv8sqALAcbDPlOE3IkAHuPQK2CyyY/pubchart?oid=17325547&amp;format=interactive"></iframe>  
     <iframe class="mobile" width="343" height="257" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSkkg-vNFXaE5VjA4N4G2bLwLfQENhN3wtj4-AxlUfIh5NO1vobv8sqALAcbDPlOE3IkAHuPQK2CyyY/pubchart?oid=1020566628&amp;format=interactive"></iframe>
   </div>
+
 </body>
 <script src="script.js"></script>
 </html>
